impr(shortcodes): repo-url supports keyword `commit`

--- a/layouts/partials/remote/url/_helper.html
+++ b/layouts/partials/remote/url/_helper.html
@@ -6,10 +6,10 @@
 {{ $url := "" }}
 
 {{ with $siteCfg }}
-  {{ $branch := .branch | default "master" }}
+  {{ $commit := $.commit | default .commit | default "master" }}
 
   {{ $url = ( printf $.urlFmt
-            .user .repo $branch $.path )
+            .user .repo $commit $.path )
   }}
 
 {{ end }}
