fixup: Params.codeRepo was an 1-length array

--- a/layouts/partials/remote/url/_helper.html
+++ b/layouts/partials/remote/url/_helper.html
@@ -1,6 +1,5 @@
 
-{{- $siteCfg := index .Site.Params.codeRepo 0 }}
-{{/* `$.Site.Params.codeRepo` is a 1-length slice */}}
+{{- $siteCfg := .Site.Params.codeRepo }}
 
 
 {{ $url := "" }}
